--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 
     <profiles>
         <profile>
-            <id>basicAlgorithm</id>
+            <id>basic</id>
             <build>
                 <plugins>
                     <plugin>
@@ -43,12 +43,12 @@
                         <version>3.2.0</version>
                         <executions>
                             <execution>
-                                <id>basicAlgorithm</id>
+                                <id>basic</id>
                                 <goals>
                                     <goal>jar</goal>
                                 </goals>
                                 <configuration>
-                                    <classifier>basicAlgorithm</classifier>
+                                    <classifier>basic</classifier>
                                     <archive>
                                         <manifest>
                                             <mainClass>com.github.akuiz.happyqa.BasicAlgorithm</mainClass>
@@ -66,7 +66,7 @@
         </profile>
 
         <profile>
-            <id>advancedAlgorithm</id>
+            <id>advanced</id>
             <build>
                 <plugins>
                     <plugin>
@@ -75,12 +75,12 @@
                         <version>3.2.0</version>
                         <executions>
                             <execution>
-                                <id>advancedAlgorithm</id>
+                                <id>advanced</id>
                                 <goals>
                                     <goal>jar</goal>
                                 </goals>
                                 <configuration>
-                                    <classifier>advancedAlgorithm</classifier>
+                                    <classifier>advanced</classifier>
                                     <archive>
                                         <manifest>
                                             <mainClass>com.github.akuiz.happyqa.AdvancedAlgorithm</mainClass>
